# Kohane

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  conanfile.txt  configure.ac  main.c  vcpkg.json
.github/workflows/: build.yml
cmake/: FindFFmpeg.cmake
